add the tasks to build.gradle.kts